# Clinical-Multi-Agent-AI-Reliability-Decision-Support-Platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/clinical_ai_api/: __init__.py  main.py
apps/api/src/clinical_ai_api/api/: __init__.py  dependencies.py  router.py
apps/api/src/clinical_ai_api/api/v1/: __init__.py  router.py
apps/api/src/clinical_ai_api/api/v1/endpoints/: __init__.py  evaluation.py  health.py  patients.py  safety.py  workflows.py
apps/api/src/clinical_ai_api/core/: __init__.py  errors.py  lifespan.py
apps/api/src/clinical_ai_api/middleware/: __init__.py  tracing.py
apps/api/src/clinical_ai_api/routers/: health.py
apps/api/src/clinical_ai_api/schemas/: base.py  evaluation.py  health.py  patients.py  safety.py  workflows.py
apps/api/src/clinical_ai_api/services/: evaluation.py  health.py  patients.py  safety.py  workflows.py
apps/api/tests/: test_health.py  test_settings.py
docs/architecture/: agent-observability-tracing.md  agent-orchestration-foundation.md  agent-orchestration-layer.md  clinical-retrieval-pipeline.md  configuration.md  docker-compose.md  end-to-end-evidence-workflow.md  escalation-logic-engine.md  evidence-retrieval-agent.md  evidence-verification-layer.md  explainable-structured-outputs.md  fastapi-backend.md  fully-orchestrated-end-to-end-workflow.md  hallucination-detection-engine.md  health-monitoring.md  knowledge-ingestion.md  mimic-iv-processing.md  observability.md  overview.md  patient-context-agent.md  patient-context-processing.md  postgresql.md  pubmed-evidence-retrieval.md  redis.md  retrieval-evaluation-framework.md  risk-analysis-agent.md  safety-critic-architecture.md  safety-evaluation-framework.md  synthetic-data.md  uncertainty-scoring-system.md  vector-retrieval.md
docs/standards/: coding-standards.md
infra/docker/: api.Dockerfile  start-api.sh
infra/redis/: redis.conf
migrations/: env.py
migrations/versions/: 20260518_0001_initial_clinical_tables.py
scripts/: generate_synthetic_clinical_dataset.py
(+7 files in other folders)
