[project]
name = "clinical-ai-reliability-platform"
version = "0.1.0"
description = "Clinical AI Reliability & Decision Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Clinical AI Platform Team" }
]
dependencies = []

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/platform",
  "packages/shared",
  "packages/agents",
  "packages/retrieval",
  "packages/evaluation",
  "packages/safety",
  "packages/multimodal"
]

[tool.uv.sources]
clinical-ai-api = { workspace = true }
clinical-ai-platform = { workspace = true }
clinical-ai-shared = { workspace = true }
clinical-ai-agents = { workspace = true }
clinical-ai-retrieval = { workspace = true }
clinical-ai-evaluation = { workspace = true }
clinical-ai-safety = { workspace = true }
clinical-ai-multimodal = { workspace = true }

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.8",
  "types-redis>=4.6.0.20240425"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM", "T20"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
addopts = "-q --cov=clinical_ai_api --cov=clinical_ai_platform --cov-report=term-missing"

