[project]
name = "clinical-ai-api"
version = "0.1.0"
description = "FastAPI service for Clinical AI Reliability & Decision Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
  "clinical-ai-platform",
  "clinical-ai-shared",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_ai_api"]

